# gotham-crimes

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md
app-robyn/: .dockerignore  Makefile  README.md  pyproject.toml
app-robyn/crimes/: app.py  models.py  queries.py  views.py
app-starlette/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
app-starlette/src/crimes/: app.py  models.py  orjsonresponse.py  queries.py  views.py
tests/load/: crime.json
