[project]
name = "crimes"
version = "0.1.0"
description = "Simple CRUD application with Starlette framework"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "aiosqlite>=0.20.0",
  "orjson>=3.10.12",
  "sqlalchemy[asyncio]>=2.0.36",
  "starlette>=0.45.0",
  "uvicorn>=0.34.0",
]

# optional config below

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"
exclude = ["docs/**/*.py"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "W", "E", "B", "I", "PL", "C90"]
ignore = []

fixable = ["ALL"]
unfixable = ["B"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.flake8-bugbear]
# Allow default arguments like, e.g., `data: List[str] = fastapi.Query(None)`.
extend-immutable-calls = [
  "Depends",
  "fastapi.Depends",
  "fastapi.params.Depends",
]

[tool.interrogate]
ignore-init-method = false
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
ignore-nested-functions = false
ignore-nested-classes = false
ignore-setters = false
ignore-overloaded-functions = false
fail-under = 50
exclude = ["setup.py", "docs", "build", "tests/", "**/__init__.py"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
ext = []
# possible values: sphinx (default), google
style = "sphinx"
# possible values: 0 (minimal output), 1 (-v), 2 (-vv)
verbose = 1
quiet = false
whitelist-regex = []
color = true
omit-covered-files = false

[tool.pytest.ini_options]
# https://docs.pytest.org/en/latest/reference/customize.html
minversion = "6.0"
addopts = "--doctest-modules -vv --cov=src/crimes --capture=no --log-cli-level=DEBUG --import-mode=importlib tests"
testpaths = ["tests"]
log_format = "%(asctime)s [%(levelname)-8s] [%(filename)s:%(lineno)s] %(message)s"
log_date_format = "%H:%M:%S"

# Reminder:
# '^file1\.py$',   # TOML literal string (single-quotes, no escaping necessary)
# "^file2\\.py$",  # TOML basic string (double-quotes, backslash and other characters need escaping

[tool.bandit]
targets = ["src"]
exclude_dirs = ["tests", ".venv"]
skips = ["B101", "B301", "B601"]

[dependency-groups]
dev = [
    "granian>=1.7.3",
]
